feat: 添加API增强功能(版本控制/缓存/监控/熔断)